added illustration credit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Running line</title>
 </head>
 <body>
+    <!-- Original illustration from undraw.co -->
     <svg width="1101" height="732" viewBox="0 0 1101 732" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="undraw_finish_line_katerina_limpitsouni_xy20 1">
         <g id="bg">
